# fast-api-Users

./: README.md  pyproject.toml
fastapi-application/: environs.md  main.py  run_main.py
fastapi-application/alembic/versions/: 2025_06_01_1619-ba04d4db6cfb_create_users_table.py  2025_06_07_1158-f4a99161b372_create_users_table.py  2025_06_11_1025-98317d676490_create_access_token_tale.py
fastapi-application/api/api_v1/: __init__.py  auth.py  fastapi_users.py  messages.py  users.py
fastapi-application/api/dependencies/: access_tokens.py  strategy.py  user_manager.py
fastapi-application/api/dependencies/authentication/: backend.py  fastapi_users.py  strategy.py  users.py
fastapi-application/api/webhooks/: user.py
fastapi-application/core/: config.py
fastapi-application/core/authentication/: user_manager.py
fastapi-application/core/models/: __init__.py  access_token.py  base.py  db_helper.py  user.py
fastapi-application/core/models/mixins/: id_int_pk.py  int_id_pk.py
fastapi-application/core/schemas/: __init__.py  user.py
fastapi-application/crud/: users.py
fastapi-application/utils/: __init__.py  case_converter.py
fastapi-application/utils/webhooks/: user.py
