[project]
name = "fastapi-baseapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "fastapi-users[sqlalchemy]==13.0.0",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.5",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
development = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
